--- a/src/containers/Main/main.css
+++ b/src/containers/Main/main.css
@@ -14,20 +14,14 @@ Breakpoints arguments choices:
 
 1em = 16px
 */
-.main {
-  border-radius: 3px; }
-  .main__content {
-    margin: 2rem 0;
-    border-radius: 3px;
-    overflow: hidden; }
-  .main__filterGrid {
-    height: 10rem;
-    margin-bottom: 12rem; }
-    @media (min-width: 48em) {
-      .main__filterGrid {
-        margin-bottom: 10rem; } }
-  .main__productsGrid {
-    padding: 1rem; }
+.grid {
+  padding: 1rem;
+  background: #282c37;
+  font-size: 1.5rem; }
 
-.sidebar {
-  overflow: visible !important; }
+.modal {
+  font-size: 1.5rem !important; }
+  .modal__header {
+    font-size: 2.5rem !important; }
+  .modal__form {
+    font-size: 1.5rem !important; }
