--- a/src/containers/App/app.scss
+++ b/src/containers/App/app.scss
@@ -31,11 +31,11 @@ html {
 .app {
   // background-color: $color-primary-light;
   padding: 1rem;
-  // height: 100rem;
+  height: 98vh;
 
 
   border-radius: 3px;
-  overflow: hidden;
+  overflow-y: scroll;
   box-shadow: $regular-box-shadow;
 
 }
