completed toggle todo

--- a/src/components/Todo/todo.css
+++ b/src/components/Todo/todo.css
@@ -14,13 +14,11 @@ Breakpoints arguments choices:
 
 1em = 16px
 */
-.product {
+.todo {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
-  .product:hover {
+  .todo:hover {
     transform: translateY(-0.5rem) scale(1.03); }
-  .product__label:not(:last-child) {
-    margin-bottom: 1rem; }
 
 .btn:hover {
   box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.2);
